# ariadne

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATIONS.bib  CITATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATUS_SUMMARY.md  Dockerfile  EXPLAIN_TO_ME.md  FINAL_REVIEW_PROMPT.md  GITHUB_POSITIONING_PROMPT.md  GITHUB_PRESENTATION_STRATEGY.md  GOVERNANCE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  NEXT_STEPS.md  PC_CURSOR_PROMPT.md  PHASE_1_COMPLETION_SUMMARY.md  PROOF_OF_WORK.md  QUANTUM_NETWORK_README.md  QUICK_START.md  README.md  RELEASE_NOTES.md  SECURITY.md  SETUP_COMPLETE.md  SETUP_ENVIRONMENT.md  __init__.py  backends.py  benchmark_results_1759132716.json  benchmark_results_1759133353.json  benchmark_results_1759133743.json  benchmark_results_1759133827.json  benchmark_results_1759133900.json  benchmark_results_1759147615.json  benchmark_results_1759148233.json  cbad_integration.py  (+18 more)
.github/: pull_request_template.md  pull_request_template_platform.md
.github/ISSUE_TEMPLATE/: backend_integration.yml  bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.github/dev-docs/: CONTINUE_WORK_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENT_TENSOR_NETWORK_FIX.py  SIMPLE_TENSOR_NETWORK_FIX.py
.github/workflows/: ci.yml  codeql.yml  release.yml  tests.yml
.qoder/quests/: unknown-task.md  unnamed-task-1758985256.md  unnamed-task.md
ariadne/: __init__.py  benchmarks.py  calibration.py  cli.py  converters.py  network_coordination.py  quantum_advantage.py  regression_detection.py  router.py  visualization.py
ariadne/backends/: __init__.py  cuda_backend.py  intel_qs_backend.py  metal_backend.py  metal_backend_stub.py  metal_shaders.py  pennylane_backend.py
ariadne/benchmarks/: comprehensive_suite.py
ariadne/ft/: qualtran_bridge.py  resource_estimator.py
ariadne/ml/: performance_prediction.py
ariadne/optimization/: __init__.py  multi_objective.py
ariadne/passes/: __init__.py  mitigation.py  zx_opt.py
ariadne/route/: analyze.py  context_detection.py  execute.py
ariadne/validation/: performance_framework.py
ariadne/verify/: __init__.py  qcec.py
ariadne_mac/: cli.py  entanglement_flow.py  qiskit_to_stim.py  quantum_advantage.py  simulation_limits.py
ariadne_mac/ft/: qualtran_bridge.py  resource_estimator.py
ariadne_mac/io/: qasm3.py
ariadne_mac/passes/: defer_measure.py  mitigation.py  segment.py  zx_peepholes.py
ariadne_mac/route/: analyze.py  boundary_optimal.py  execute.py
ariadne_mac/utils/: env.py  logs.py  memory.py  mps_helpers.py
ariadne_mac/verify/: qcec.py
ariadne_quantum.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bench/: README.md
benchmarks/: BENCHMARK_REPORT.md  MIND_BLOWING_RESULTS.md  cuda_benchmark_results.json  cuda_integration_test.py  cuda_performance_test.py  cuda_vs_cpu.py  honest_performance_results.json  large_cuda_test.py  metal_benchmark_results.json  metal_vs_cpu.py  mps_performance_validation.py  quantum_supremacy_results.json  reproducible_benchmark.py  results.json  router_comparison.py  routing_benchmarks.md  run_all_benchmarks.py  run_benchmarks.py  simple_cuda_test.py
benchmarks/results/: cuda_integration_results.json  (+4 more)
configs/: mitigation.yaml  router_policy.yaml
dev-artifacts/: BACKEND_DEVELOPMENT_PROMPT.md  COMPREHENSIVE_BACKEND_FIX_PROMPT.md  IMPLEMENTATION_PLAN.md  QUICK_FIX_TENSOR_NETWORK.py
docs/: ACCURACY_VERIFICATION_PROMPT.md  ARIADNE_LAUNCH_ACCELERATOR.md  CALIBRATION_PLAN.md  CONTINUE_PROJECT.md  DOCKER.md  PLATFORM_DEVELOPMENT.md  README.md  README_DISCOVERY.md  REALITY_CHECK_PROMPT.md  RELEASE_VALIDATION_SUMMARY.md  SOCIAL_MEDIA_ANNOUNCEMENT.md  api_reference.md  apple_silicon.md  apple_silicon_notes.md  cuda_backend_roadmap.md  cuda_performance_report.md  installation.md  quickstart.md  router_decisions.md  setup_project.md  troubleshooting.md
driftlock/: driftlock.py  driftlock_integration.py
examples/: 01_qasm3_roundtrip.ipynb  01_qasm3_roundtrip.py  01_sv_limits.ipynb  01_sv_limits.py  02_mitigation_autopilot.ipynb  02_mitigation_autopilot.py  02_stim_qec.ipynb  02_stim_qec.py  03_router_showdown.ipynb  03_router_showdown.py  03_tn_qaoa.ipynb  04_qasm3_qcec.ipynb  04_qasm3_qcec.py  04_qualtran_to_resources.ipynb  04_qualtran_to_resources.py  05_qualtran_resources.ipynb  05_qualtran_resources.py  06_mps_entanglement_demo.py  README.md  _util.py  bell_state_demo.py  clifford_circuit.py  enhanced_routing_demo.py  enterprise_integration_demo.py  performance_comparison.py  quantum_algorithms.py  quantum_network_demo.py  quantum_supremacy_demo.py  quantum_threat_detection_demo.py  quickstart.py  routing_demo.py  segmented_demo.py  simple_demo.py  stabilizer_circuit_demo.py
ft/: resource_estimator.py
io/: qasm3.py
notebooks/: 01_ariadne_advantage.ipynb  02_mps_performance_scaling.ipynb
passes/: mitigation.py  zx_opt.py
quantum_network/: __init__.py  anomaly.py  coordinator.py  distributed.py  entanglement.py  qkd.py  sensors.py  timing.py
reports/: segmented_showcase.md
results/: BENCHMARK_SUMMARY.md  cuda_benchmark_results.json  metal_benchmark_results.json  router_benchmark_results.json
route/: execute.py
scripts/: platform_benchmark.py
tests/: test_algorithm_validation.py  test_backend_real_simulation.py  test_backends.py  test_clifford_analysis.py  test_comprehensive_backends.py  test_cuda_backend.py  test_error_handling.py  test_metal_backend.py  test_mps_backend.py  test_network_integration.py  test_performance_validation.py  test_qcec_equiv.py  test_router_selection.py  test_routing.py  test_visualization.py  test_zne_improves.py
tests_mac/: test_azure_re.py  test_cdr_cache.py  test_defer_measure.py  test_mac_azure_table.py  test_mac_qcec_and_zne.py  test_mac_qcec_artifact.py  test_mac_router_dd_pick.py  test_mac_router_tn_pick.py  test_mac_stim_aer_parity.py  test_segmented_end2end.py  test_segmented_runner.py  test_stim_conversion_random.py  test_stim_measure_controls.py  test_tn_concurrency.py
verify/: qcec.py
website/: index.html  package.json  script.js  style.css  vite.config.js
(+65 files in other folders)
